<resources>
    <string name="app_name">Layers Showcase</string>

    <string name="action_settings">Settings</string>

    <string name="free">Free Layers</string>
    <string name="paid">Paid Layers</string>
    <string name="donate">Donate Layers</string>
    <string name="details">Details</string>
    <string name="showcasetitle">Showcase</string>
    <string name="General">General</string>
    <string name="developer_settings">Developer settings</string>
    <string name="screensize">Compatible screen Sizes</string>

    <string name="description">Description</string>
    <string name="error">Error</string>
    <string name="developer">Author</string>
    <string name="testdeveloper">TestDeveloper</string>
    <string name="info">More Info</string>
    <string name="gettheme">Get Layer</string>
    <string name="installtheme">Install Layer</string>
    <string name="donatev">Donate</string>
    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="layerstheme">Layer</string>
    <string name="action_search">Search</string>

    <!-- MAIN SCREEN CARD TEXT -->
    <string name="layersthemestitle">Layers</string>
    <string name="freecard1header">Free Layers</string>
    <string name="freecard1">Click to list all free layers</string>
    <string name="paidcard2header">Paid Layers</string>
    <string name="donatecard2">Click to list all paid layers</string>

    <!-- DETAILS MESSAGES -->
    <string name="supportsL">This Layer supports your Android version (Android Lollipop)</string>
    <string name="supportsM">This Layer supports your Android version (Android Marshmallow)</string>
    <string name="nosupport">This Layer does not support the Android Version you are currently running.
        Installing this layer can cause Bootloops or Force Closes.</string>

    <string name="densitySupport">This Layer supports your device\u0027s display density which is</string>
    <string name="nodensitysupport">This Layer does not support your device\u0027s display density.
This may cause blurry looking drawables or drawables which are not themed.</string>

    <string name="density">Display density</string>
    <string name="densityAlert">Icon indicates if this layer supports your devices display density
        \nGreen = supported\nRed = not supported</string>

    <!-- About -->
    <string name="developedby">Layers developed by</string>
    <string name="usefullinks">Useful links</string>
    <string name="AditionalLayersDev">Additional Layers commits</string>
    <string name="findOutWhatsNew">Find out whats new</string>
    <string name="joinTheChat">Join the chat</string>
    <string name="AppDeveloper">App Developer</string>
    <string name="LayersDeveloper">Layers Developer</string>
    <string name="LayersLeadDeveloper">Layers Lead Developer</string>
    <string name="ShowcaseDeveloper">Showcase Developer</string>

    <!-- Licenses -->
    <string name="OpenSourceLicenses">Open Source Licenses:</string>
    <string name="License1" translatable="false">Persistent Search</string>
    <string name="License1about" translatable="false">Kieron Quinn</string>
    <string name="License1github" translatable="false">https://github.com/Quinny898/PersistentSearch</string>

    <string name="License2" translatable="false">FasterXML</string>
    <string name="License2about" translatable="false">FasterXML Developers</string>
    <string name="License2github" translatable="false">https://github.com/FasterXML/jackson-core</string>

    <string name="License3" translatable="false">Picasso</string>
    <string name="License3about" translatable="false">Square, Inc.</string>
    <string name="License3github" translatable="false">https://github.com/square/picasso</string>

    <string name="License4" translatable="false">Guava</string>
    <string name="License4about" translatable="false">Google, Inc.</string>
    <string name="License4github" translatable="false">https://github.com/google/guava</string>

    <string name="License5" translatable="false">Material LeanBack</string>
    <string name="License5about" translatable="false">Florent CHAMPIGNY</string>
    <string name="License5github" translatable="false">https://github.com/florent37/MaterialLeanBack</string>


    <string name="Apache1">Copyright ©</string>
    <string name="Apache2">\n\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at\n\nhttp://www.apache.org/licenses/LICENSE-2.0\n\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>

    <!-- Links -->
    <string name="linkXda" translatable="false">http://forum.xda-developers.com/android/apps-games/official-layers-bitsyko-apps-rro-t3012172</string>
    <string name="linkCommunity" translatable="false">https://plus.google.com/u/0/communities/102261717366580091389</string>
    <string name="linkNiklas" translatable="false">https://plus.google.com/u/0/+NiklasSchnettler/posts</string>
    <string name="linkSteve" translatable="false">https://plus.google.com/u/0/+SteveLovejoy/posts</string>
    <string name="linkAldrin" translatable="false">https://plus.google.com/u/0/+AldrinHolmes20/posts</string>
    <string name="linkBrian" translatable="false">https://plus.google.com/u/0/+BrianGill55/posts</string>
    <string name="linkReinhard" translatable="false">https://plus.google.com/101549242713977412381/posts</string>
    <string name="linkSyko" translatable="false">https://plus.google.com/u/0/+SykoPompos/posts</string>
    <string name="linkBranden" translatable="false">https://plus.google.com/u/0/101729058057775926785/posts</string>
    <string name="linkDenis" translatable="false">https://plus.google.com/u/0/+DenisSuarez98/posts</string>
    <string name="linkAndrzej" translatable="false">https://plus.google.com/u/0/117376207394302665227/posts</string>
    <string name="VisitGithub" translatable="false">Github</string>
    <string name="home">Home</string>


    <!-- NavDrawer -->
    <string name="More">More</string>
    <string name="Tutorial">Tutorial</string>
    <string name="About">About</string>
    <string name="Showcase">Layers Showcase</string>
    <string name="discover">Discover</string>
    <string name="PlayStore">PlayStore</string>
    <string name="Settings">Settings</string>
    <string name="Manager">Layers Manager</string>
    <string name="Submit">Submit a Layer</string>

    <!-- Json Form EditText -->
    <string name="title">Title</string>
    <string name="downloadlink">Download Link</string>
    <string name="backupdownloadlink">Backup Download Link</string>
    <string name="icon">Icon H=256 x W=256</string>
    <string name="promo">Promo Image W=1598 x H=10526</string>
    <string name="screenshot_1">Screenshot 1 H=1920 include a backup link after a comma</string>
    <string name="screenshot_2">Screenshot 2 H=1920 include a backup link after a comma</string>
    <string name="screenshot_3">Screenshot 3 H=1920 include a backup link after a comma</string>
    <string name="googleplus">Google+ Post</string>
    <string name="version2">Version Number</string>
    <string name="donatedownload">Donate Version Download Link</string>
    <string name="pluginversion">Plugin Version</string>
    <string name="donateversion">Version Number For Donate Theme If You Have</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="color">Showcase Toolbar Color Hex ie: 212121</string>
    <!-- Json Form CheckBox -->
    <string name="lollipopsupport">Lollipop Support</string>
    <string name="msupport">M Support</string>
    <string name="basicrrolollipop">Basic RRO Lollipop</string>
    <string name="basicrrom">Basic RRO M</string>
    <string name="layerstype2lollipop">Layers Type 2 Lollipop</string>
    <string name="layerstype3">Layers Type 3</string>
    <string name="layerstype3m">Layers Type 3 M</string>
    <string name="touchwiz">Touchwiz</string>
    <string name="lg">LG</string>
    <string name="sense">Sense</string>
    <string name="xperia">Xperia</string>
    <string name="asuszenui">Asus ZenUI</string>
    <string name="hdpi">hdpi</string>
    <string name="mdpi">mdpi</string>
    <string name="xhdpi">xhdpi</string>
    <string name="xxhdpi">xxhdpi</string>
    <string name="xxxhdpi">xxxhdpi</string>
    <string name="doesitneedupdating">Does It Need Updating</string>
    <string name="willyoubeupdating">Will You Be Updating</string>
    <string name="bootanimation">Boot Animation</string>
    <string name="font">Font</string>
    <string name="iconpack">Icon Pack</string>
    <!-- Json Form Button -->
    <string name="send">Generate Json</string>

    <string name="noPermission">No Permission</string>
    <string name="noPermissionDescription">No permission to view your phone´s internal storage granted.\nYou won´t be able to use this feature until you grant this permission.</string>
</resources>
