<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:checked="true"
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_drawer_home"
            android:title="@string/home" />
        <item

            android:id="@+id/nav_free"
            android:icon="@drawable/gift"
            android:title="@string/freecard1header" />
        <item
            android:id="@+id/nav_paid"
            android:icon="@drawable/ic_drawer_paid"
            android:title="@string/paidcard2header" />
    </group>

    <item android:title="@string/discover">
        <menu>
            <item
                android:id="@+id/nav_manager"
                android:icon="@drawable/ic_drawer_manager"
                android:title="@string/Manager" />
            <item
                android:id="@+id/nav_playStore"
                android:icon="@drawable/ic_drawer_playstore"
                android:title="@string/PlayStore" />
        </menu>
    </item>

    <item android:title="@string/More">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_drawer_about"
                android:title="@string/About" />

            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_drawer_settings"
                android:title="@string/Settings" />

        </menu>
    </item>

</menu>