<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <android.support.v7.widget.Toolbar

        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?android:attr/colorPrimary"
        android:elevation="4dp"
        android:gravity="center"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="@style/Base.Theme.Test"
        tools:context="com.lovejoy777.showcase.activities.SubmitActivity">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:id="@+id/layout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar"
        android:background="@color/background_material_light"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="none">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background_material_light"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/title"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/author"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/author" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/downloadlink" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/backup_link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/backupdownloadlink" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/icon"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/icon" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/promo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/promo" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/screenshot_1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/screenshot_1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/screenshot_2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/screenshot_2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/screenshot_3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/screenshot_3" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/googleplus"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/googleplus" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/version2" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/donate_link"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/donatedownload" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/donate_version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/donateversion" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/wallpaper"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wallpaper" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/plugin_version"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pluginversion" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/toolbar_background_color"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/color" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/for_L"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lollipopsupport" />

            <CheckBox
                android:id="@+id/for_M"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/msupport" />

            <CheckBox
                android:id="@+id/basic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basicrrolollipop" />

            <CheckBox
                android:id="@+id/basic_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/basicrrom" />

            <CheckBox
                android:id="@+id/type2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layerstype2lollipop" />

            <CheckBox
                android:id="@+id/type3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layerstype3" />

            <CheckBox
                android:id="@+id/type3_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layerstype3m" />

            <CheckBox
                android:id="@+id/touchwiz"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touchwiz" />

            <CheckBox
                android:id="@+id/lg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lg" />

            <CheckBox
                android:id="@+id/sense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sense" />

            <CheckBox
                android:id="@+id/xperia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xperia" />

            <CheckBox
                android:id="@+id/zenui"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asuszenui" />

            <CheckBox
                android:id="@+id/hdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hdpi" />

            <CheckBox
                android:id="@+id/mdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mdpi" />

            <CheckBox
                android:id="@+id/xhdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xhdpi" />

            <CheckBox
                android:id="@+id/xxhdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxhdpi" />

            <CheckBox
                android:id="@+id/xxxhdpi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/xxxhdpi" />

            <CheckBox
                android:id="@+id/free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/free" />

            <CheckBox
                android:id="@+id/donate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/donate" />

            <CheckBox
                android:id="@+id/paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paid" />

            <CheckBox
                android:id="@+id/needs_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doesitneedupdating" />

            <CheckBox
                android:id="@+id/will_update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/willyoubeupdating" />

            <CheckBox
                android:id="@+id/bootani"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bootanimation" />

            <CheckBox
                android:id="@+id/font"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/font" />

            <CheckBox
                android:id="@+id/iconpack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/iconpack" />

            <Button
                android:id="@+id/generate"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="send"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/snackbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom|end"
        android:tint="@color/white"></android.support.design.widget.CoordinatorLayout>

</RelativeLayout>